--- a/views/edit.jade
+++ b/views/edit.jade
@@ -6,15 +6,17 @@ block content
 			if (post.top === true)
 				.newPost
 					form.form-post(role='form', action="/forum/thread?id=#{thread._id}", method="POST")
-						input.form-input(type="text", name="title", placeholder="Title")
-						input.form-input(type="text", name="content", placeholder="What did you want to say?")
+						input.form-input(type="text", name="title", placeholder="#{thread.title}", )
+						input.form-input(type="text", name="content", placeholder="#{post.content}")
 						input(type="hidden", name="postID", value="#{post._id}")
+						input(type="hidden", name="postTime", value="#{post.created}")
 						button.form-submit(type="submit") Submit
 						a.forgot(href="/forum/thread?id=#{thread._id}") Cancel
 			else 
 				.newPost
 					form.form-post(role='form', action="/forum/thread?id=#{thread._id}", method="POST")
-						input.form-input(type="text", name="content", placeholder="What did you want to say?")
+						input.form-input(type="text", name="content", placeholder="#{post.content}")
 						input(type="hidden", name="postID", value="#{post._id}")
+						input(type="hidden", name="postTime", value="#{post.created}")
 						button.form-submit(type="submit") Submit
 						a.forgot(href="/forum/thread?id=#{thread._id}") Cancel
