--- a/views/post.jade
+++ b/views/post.jade
@@ -22,19 +22,34 @@ block content
 				ul.threads
 					for item,i in posts
 						- var z = (100) - [i];
-						li(style="z-index: #{z};")
-							ul.threadItem
-								.middle-left
-									p=item[2]
-								.middle-right
-									p=item[4]
-								.post
-									p=item[3]
-								.bottom-left
-								if (currentuser === postuser)
-									.bottom-right
-										a(href="/forum/edit?id=#{item[0]}") edit
-										a(href="/forum/delete?id=#{item[0]}") delete
+						if (i == 0)
+							li(style="z-index: #{z}")
+								ul.threadItem
+									.middle-left
+										p=item[2]
+									.middle-right
+										p=item[4]
+									.post
+										p=item[3]
+									.bottom-left
+									if (currentuser === postuser)
+										.bottom-right
+											a(href="/forum/edit?id=#{item[0]}") edit
+											a(href="/forum/delete?id=#{item[0]}") delete
+						else
+							li
+								.postItem
+									.middle-left
+										p=item[2]
+									.middle-right
+										p=item[4]
+									.post
+										p=item[3]
+									.bottom-left
+									if (currentuser === postuser)
+										.bottom-right
+											a(href="/forum/edit?id=#{item[0]}") edit
+											a(href="/forum/delete?id=#{item[0]}") delete
 		.postReply
 			form.form-post(role='form', action="/forum/thread?id=#{thread[0]}", method="POST")
 				input.form-input(type="text", name="content", placeholder="Your reply")
