--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -327,22 +327,57 @@ form {
             width: auto;
             margin: 0 auto; }
     .container .chatRoom .videoWrap {
-      display: none; }
-      .container .chatRoom .videoWrap .videoDisplay #remoteVideo {
-        width: 100%;
+      display: none;
+      width: 100%;
+      height: 75vh;
+      padding-top: 20px; }
+      .container .chatRoom .videoWrap #remotes {
+        height: 100%;
+        width: 100%; }
+        .container .chatRoom .videoWrap #remotes .videoDisplay {
+          position: relative;
+          text-align: center; }
+          .container .chatRoom .videoWrap #remotes .videoDisplay video {
+            top: 0;
+            left: 0;
+            -webkit-border-radius: 20px;
+            -moz-border-radius: 20px;
+            -ms-border-radius: 20px;
+            border-radius: 20px;
+            margin: 0 auto; }
+      .container .chatRoom .videoWrap .localDisplay {
+        width: 200px;
+        height: 150px;
         position: relative;
-        background-color: #000000;
-        height: 100%; }
-      .container .chatRoom .videoWrap .videoDisplay .videoOptions {
+        bottom: 120px;
+        float: right;
+        margin-right: 20px; }
+        .container .chatRoom .videoWrap .localDisplay video {
+          width: 100%;
+          position: absolute;
+          border: solid 4px #ea5455;
+          -webkit-border-radius: 20px;
+          -moz-border-radius: 20px;
+          -ms-border-radius: 20px;
+          border-radius: 20px; }
+      .container .chatRoom .videoWrap #localScreenContainer {
+        display: none; }
+      .container .chatRoom .videoWrap .connectionstate {
+        position: absolute;
+        top: 0px;
+        width: 100%;
+        text-align: center;
+        color: #fff; }
+      .container .chatRoom .videoWrap .videoOptions {
         width: 100%;
         height: 40px;
         position: fixed;
         bottom: 0; }
         @media screen and (min-width: 700px) {
-          .container .chatRoom .videoWrap .videoDisplay .videoOptions {
+          .container .chatRoom .videoWrap .videoOptions {
             width: 500px;
             margin: 0 auto; } }
-        .container .chatRoom .videoWrap .videoDisplay .videoOptions .chat-btn {
+        .container .chatRoom .videoWrap .videoOptions .chat-btn {
           background-color: #ea5455;
           color: #ffffff;
           width: 25%;
@@ -352,35 +387,12 @@ form {
           cursor: pointer;
           vertical-align: top;
           text-align: center; }
-          .container .chatRoom .videoWrap .videoDisplay .videoOptions .chat-btn:hover {
+          .container .chatRoom .videoWrap .videoOptions .chat-btn:hover {
             background-color: #213e64; }
-          .container .chatRoom .videoWrap .videoDisplay .videoOptions .chat-btn img {
+          .container .chatRoom .videoWrap .videoOptions .chat-btn img {
             height: 38px;
             width: auto;
             margin: 0 auto; }
-  .container .videoDisplay {
-    position: relative;
-    width: 200px;
-    height: 150px; }
-  .container .videoDisplay video {
-    position: absolute;
-    width: 100%;
-    height: 100%; }
-  .container .volume {
-    position: absolute;
-    left: 15%;
-    width: 70%;
-    bottom: 5px;
-    height: 5px;
-    display: none; }
-  .container .connectionstate {
-    position: absolute;
-    top: 0px;
-    width: 100%;
-    text-align: center;
-    color: #fff; }
-  .container #localScreenContainer {
-    display: none; }
   .container .forumWrap .addPost {
     float: right;
     padding: 20px; }
