--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -329,14 +329,17 @@ form {
     .container .chatRoom .videoWrap {
       display: none;
       width: 100%;
-      height: 75vh;
-      padding-top: 20px; }
+      height: 100%;
+      padding-top: 40px;
+      background-color: #000000;
+      position: fixed; }
       .container .chatRoom .videoWrap #remotes {
         height: 100%;
         width: 100%; }
         .container .chatRoom .videoWrap #remotes .videoDisplay {
           position: relative;
-          text-align: center; }
+          text-align: center;
+          margin-top: 100px; }
           .container .chatRoom .videoWrap #remotes .videoDisplay video {
             top: 0;
             left: 0;
@@ -344,13 +347,14 @@ form {
             -moz-border-radius: 20px;
             -ms-border-radius: 20px;
             border-radius: 20px;
-            margin: 0 auto; }
+            margin: 0 auto;
+            width: 92%; }
       .container .chatRoom .videoWrap .localDisplay {
         width: 200px;
         height: 150px;
-        position: relative;
-        bottom: 120px;
-        float: right;
+        position: fixed;
+        bottom: 60px;
+        right: 0px;
         margin-right: 20px; }
         .container .chatRoom .videoWrap .localDisplay video {
           width: 100%;
