--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -157,13 +157,13 @@ form { padding: $pad; margin: 0 auto; font-size: 1em; text-align: left;
             }
         }
 
-        .videoWrap { display: none; width: 100%; height: 75vh; padding-top: $pad;
+        .videoWrap { display: none; width: 100%; height: 100%; padding-top: $pad*2; background-color: $black; position: fixed;
             #remotes { height: 100%; width: 100%;
-                .videoDisplay { position: relative; text-align: center;
-                    video { top: 0; left: 0; @include border-radius(20px); margin: 0 auto;}
+                .videoDisplay { position: relative; text-align: center; margin-top: 100px;
+                    video { top: 0; left: 0; @include border-radius(20px); margin: 0 auto; width: 92%;}
                 }
             }
-            .localDisplay { width: 200px; height: 150px; position: relative; bottom: 120px; float: right; margin-right: $pad;
+            .localDisplay { width: 200px; height: 150px; position: fixed; bottom: 60px; right: 0px; margin-right: $pad;
                 video { width: 100%; position: absolute; border: solid 4px $red; @include border-radius(20px); }
             }
             #localScreenContainer { display: none; }
