--- a/views/chatroom.jade
+++ b/views/chatroom.jade
@@ -33,8 +33,8 @@ block content
 						video#localVideo(autoplay muted)
 					.videoOptions
 						.chat-btn#switchToChat
-							img(src='/images/icon-switchToChat.png')
+							img(src='/images/icon-backarrow.png')
 						.chat-btn#callButton
 							img(src='/images/icon-phone.png')
 						.chat-btn#muteButton
-						.chat-btn#hangupButton
+						.chat-btn#killVideoButton
