--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -21,7 +21,7 @@ button { border: none; background-color: $red; color: $white; cursor: pointer; f
     &:focus { outline: none;}
 }
 .htags { font-family: $sans; font-weight: 300; @include webkit-margin(0px); }
-h1 { @extend .htags; font-size: 1.8em; color: $red; }
+h1 { @extend .htags; font-size: 1.8em; color: $blue; }
 h2 { @extend .htags; font-size: 1.2em; color: $blue; }
 ul { -webkit-padding-start: 0px; margin: 0; }
 li { list-style-type: none; }
@@ -211,10 +211,18 @@ form { padding: $pad; margin: 0 auto; font-size: 1em; text-align: left;
                     .settingInput { display: inline-block; }
                 }
                 input {}
+                form { width: 80%; margin: 0 auto;
+                    .inactive {pointer-events: none;}
+                    .active {pointer-events: auto;}
+                }
             }
         }
         .settingsA { z-index: 100; margin: $pad*2 0 0; }
         .settingsN { z-index: 50; }
+
+        .changeSettings {
+
+        }
     }
 
 } // end of container
