--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -208,6 +208,23 @@ form { padding: $pad; margin: 0 auto; font-size: 1em; text-align: left;
             .settingsAccount, .settingsNotification { text-align: left; background-color: white; @include box-shadow( 0px 7px 14px 0px rgba(0,0,0,0.2)); padding: $pad;
                 .setting { text-align: left; display: block; padding-top: $pad;
                     .settingTitle { color: $blue; display: inline-block; width: 30%; }
+
+                    .onoffswitch { position: relative; width: 71px; -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none; display: inline-block;
+                        .onoffswitch-checkbox { display: none; }
+                        .onoffswitch-label { display: block; overflow: hidden; cursor: pointer; border: solid 2px $blue; @include border-radius(20px); 
+                            .onoffswitch-inner { display: block; width: 200%; margin-left: -100%; transition: margin 0.3s ease-in 0s; }
+                            .onoffswitch-inner:before, .onoffswitch-inner:after { display: block; float: left; width: 50%; height: 28px; padding: 0; line-height: 28px; font-size: 0.8em; color: $white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold; box-sizing: border-box; }
+                            .onoffswitch-inner:before { content: "ON"; padding-left: $pad/2; background-color: $white; color: $blue; }
+                            .onoffswitch-inner:after { content: "OFF"; padding-right: $pad/2; background-color: $grey; color: darken($grey, 20%); text-align: right; }
+                            .onoffswitch-switch { display: block; width: 25px; margin: 3px; background: $blue; position: absolute; top: 0; bottom: 0; right: 39px; border: 2px solid $blue; @include border-radius(20px); transition: all 0.3s ease-in 0s; }
+                            
+                        }
+                        .onoffswitch-checkbox:checked + .onoffswitch-label { 
+                            .onoffswitch-inner { margin-left: 0px; }
+                            .onoffswitch-switch { right: 0px; }
+                        }
+                    }
+
                     .settingInput { display: inline-block; }
                 }
                 input {}
@@ -218,10 +235,8 @@ form { padding: $pad; margin: 0 auto; font-size: 1em; text-align: left;
             }
         }
         .settingsA { z-index: 100; margin: $pad*2 0 0; }
-        .settingsN { z-index: 50; }
-
-        .changeSettings {
-
+        .settingsN { z-index: 50; 
+            .settingTitle { vertical-align: middle; padding-bottom: $pad; }
         }
     }
 
