--- a/views/settings.jade
+++ b/views/settings.jade
@@ -56,7 +56,7 @@ block content
 									p password
 								.settingInput
 									p ***********
-					a(href='/deleteaccount')
+					a(href='/delete')
 						.setting
 							.settingTitle
 								p account
