--- a/views/home.jade
+++ b/views/home.jade
@@ -32,7 +32,7 @@ block content
 									li(style="z-index: #{z};")
 										a(href="/chat/chatpeer?user=#{history[i][0]}")
 											ul.historyitem
-												.middle-left
+												.top
 													p=history[i][0]
 												.middle-right
 													p=history[i][2]
