--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -153,6 +153,7 @@ form { padding: $pad; margin: 0 auto; font-size: 1em; text-align: left;
             #incoming {
                 padding-bottom: $pad * 4;
                 li { list-style-type: none; }
+                .istyping { display: block; font-size: 0.8em;}
                 .msgtime { width: 100%; display: block; font-size: 0.6em; margin-bottom: -10px;}
                 .incomingMessage { width: 92%; display: inline-block; padding: $pad/2; margin-bottom: $pad;}
                 #user1msg { background-color: $white; color: $blue; border: solid 1px $white; @include border-radius(5px); }
