--- a/views/chatroom.jade
+++ b/views/chatroom.jade
@@ -6,6 +6,7 @@ block content
 		user1 = '#{userIDs[0]}';
 		user1username = '#{usersInRoom[0]}';
 		// user 2 is peer
+		user2 = '#{userIDs[1]}';
 		user2username = '#{usersInRoom[1]}';
 	script(src="https://simplewebrtc.com/latest-v2.js")
 	script(src='/js/client.js')
@@ -13,7 +14,7 @@ block content
 		include includes/nav.jade
 		.chatRoom
 			if (room)
-				h1#user2 #{usersInRoom[1]}
+				h1 #{usersInRoom[1]}
 				.displayMessagesWrap
 					ul#incoming
 				.sendMessagesWrap
@@ -23,8 +24,9 @@ block content
 							img(src='/images/icon-image.png')
 						.chat-btn#chat-btn-video
 							img(src='/images/icon-switchToVideo.png')
-						.chat-btn#chat-btn-block
-							img(src='/images/icon-block.png')
+						a(href='/chat/blockuser?id=#{usersInRoom[1]}')
+							.chat-btn#chat-btn-block
+								img(src='/images/icon-block.png')
 						button.chat-btn#outgoingSubmit(type='submit') Submit
 				.videoWrap
 					#remotes
